# did-derive

./: .dockerignore  Dockerfile  README.md  derive.py  from_seed.py  generate.py  pyproject.toml  requirements.txt  short_to_long.py
src/did_derive/: __init__.py  default.py  derive_did_key.py  from_seed.py  generate.py  short_to_long.py
